about: align gpu pills more neatly

previously we intentionally shoved everything to the top so it looks
good even when multiple lines are on the value side. it occurred to me
that we can just do this conditionally and achive the same multiline
result while also looking properly aligned when not dealing with
multilines

BUG: 500355


(cherry picked from commit 731970262ca47c22d1054b541904206c65d1830d)

Co-authored-by: Harald Sitter <sitter@kde.org>